methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: illegal start of simple expression
  while (biscuit==0){
  ^